Restructure Docker deployment configuration
- Move deployment configs to deployment/local and deployment/production
- Add interactive deploy.sh helper script for local development
- Add comprehensive README documentation for both environments
- Remove old docker/ folder and root-level Docker files
- Update .gitignore to exclude sensitive env files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 .env
 .env.backup
 .env.production
+
+# Claude Code
+.claude/
+
+# Deployment env files (keep .env.example)
+deployment/*/.env
+deployment/*/.env.*
+!deployment/*/.env.example
 .phpactor.json
 .phpunit.result.cache
 /.fleet
