--- a/.github/workflows/sync-to-bitbucket.yml
+++ b/.github/workflows/sync-to-bitbucket.yml
@@ -1,13 +1,13 @@
-name: Sync to Bitbucket (One-Way)
+name: Sync to Bitbucket
 
 on:
   push:
     branches:
-      - '*' # Sinkronisasi semua branch
+      - '*' 
     tags:
-      - '*' # Sinkronisasi semua tag
-  delete: # Trigger saat branch dihapus di GitHub
-  workflow_dispatch: # Tombol manual untuk memaksa sync
+      - '*' 
+  delete: 
+  workflow_dispatch:
 
 jobs:
   sync-to-bitbucket:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Mengambil history lengkap agar push valid
+          fetch-depth: 0
 
       - name: Setup SSH for Bitbucket
         uses: webfactory/ssh-agent@v0.9.0
@@ -41,11 +41,11 @@ jobs:
           # 4. Eksekusi Sinkronisasi
           if [ "${{ github.event_name }}" == "delete" ]; then
             # Hapus branch di Bitbucket jika dihapus di GitHub
-            echo "🗑️ Deleting ref on Bitbucket..."
+            echo "Deleting ref on Bitbucket..."
             git push bitbucket --delete "${{ github.event.ref }}"
           else
             # Push perubahan ke Bitbucket
-            echo "➡️ Pushing to Bitbucket..."
+            echo "Pushing to Bitbucket..."
             # Tanpa --force: Aman. Jika ada konflik, pipeline gagal (Anda harus manual fix).
             git push bitbucket "${{ github.ref }}"
           fi
